--- a/apply/index.html
+++ b/apply/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSejA16W4x4p2_7M6KqHDBwK4mPcD0wyvIPEkOc5AvSbUSVA4w/viewform">
-  </head>
-  <body>
-    Loading...
-  </body>
-</html>
+<html> <head> <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> <title>Add your Typeform title here</title> <style type="text/css"> html{ margin: 0; height: 100%; overflow: hidden; } iframe{ position: absolute; left:0; right:0; bottom:0; top:0; border:0; } </style> </head> <body> <iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="https://gunnhacks40.typeform.com/to/YXcB2C"></iframe> <script type="text/javascript" src="https://embed.typeform.com/embed.js"></script> </body> </html>
