--- a/index.html
+++ b/index.html
@@ -70,13 +70,21 @@
         -->
               <p>Applications will be released soon!</p>
 
-              <br>
-
               <p>Sign up for updates. We'll keep you posted.</p>
-                <form style="margin-top: -10px;" id="signup" action="//gunnhacks.us8.list-manage.com/subscribe/post?u=75ea75c14a262e7f27800abb9&amp;id=31be955ef0" method="post" target="_blank" novalidate>
-                    <input type="email" style="width: 200px; padding:5px 10px 5px 10px;" placeholder="Email address" class="email" spellcheck="false" autofocus name=
-                    "EMAIL" id="mce-EMAIL"><input type="submit" value="Subscribe">
-                </form>
+                <!-- Begin MailChimp Signup Form -->
+              <form style="margin-top: -10px;" id="signup" action="//gunnhacks.us8.list-manage.com/subscribe/post?u=75ea75c14a262e7f27800abb9&amp;id=4f970d98f8" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                <input type="email" style="width: 200px; padding:6px 10px 5px 10px;" placeholder="Email address" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_75ea75c14a262e7f27800abb9_4f970d98f8" tabindex="-1" value=""></div>
+                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                  </div>
+              </form>
+
+              <!--<form style="margin-top: -10px;" id="signup" action="//gunnhacks.us8.list-manage.com/subscribe/post?u=75ea75c14a262e7f27800abb9&amp;id=31be955ef0" method="post" target="_blank" novalidate>
+                <input type="email" style="width: 200px; padding:5px 10px 5px 10px;" placeholder="Email address" class="email" spellcheck="false" autofocus name=
+                "EMAIL" id="mce-EMAIL"><input type="submit" value="Subscribe">
+              </form>-->
 
               <p style="margin-top: -10px;">Questions? Email <a href="mailto:info@gunnhacks.com">info@gunnhacks.com</a></p>
             </div>
