--- a/register/index.html
+++ b/register/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSe38dSKUoqUrK9dGKbxAmuYkAD_OLmymDSF3inXk7ntrkex6Q/viewform">
   </head>
   <body>
-    Loading...
+    Alonzo is eating a taco...
   </body>
 </html>
