added apply now button and put in schedule

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 	      <center><a href="/slack"><button style="width: 200px; height: 40px;">Join Slack</button></a></center>
         <center><a href="http://gunnhacks4.devpost.com"><button style="width: 200px; height: 40px;">Register on Devpost</button></a></center><br />
         -->
+        <!--
               <p>Applications will be released soon!</p>
 
               <p>Sign up for updates. We'll keep you posted.</p>
-                <!-- Begin MailChimp Signup Form -->
               <form style="margin-top: -10px;" id="signup" action="//gunnhacks.us8.list-manage.com/subscribe/post?u=75ea75c14a262e7f27800abb9&amp;id=4f970d98f8" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
                 <input type="email" style="width: 200px; padding:6px 10px 5px 10px;" placeholder="Email address" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups
                   <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_75ea75c14a262e7f27800abb9_4f970d98f8" tabindex="-1" value=""></div>
                   <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
                   </div>
@@ -89,26 +89,29 @@
               <p style="margin-top: -10px;">Questions? Email <a href="mailto:info@gunnhacks.com">info@gunnhacks.com</a></p>
             </div>
             <div class="nav">
-      	     <!-- <a href="/apply">Apply</a>-->
+      	      <a href="/register">Apply</a>
               <a href="#schedule">Schedule</a>
               <a href="#sponsors">Sponsors</a>
 	      <a href="/code-of-conduct.pdf">Terms</a>
             </div>
 
+            <!-- Apply Now Button-->
+            <button style="margin-top: 60px;">Apply Now</button>
+
           </section>
 
           <footer>
-            <p>Sanctioned by the Gunn CS Department.</p>
+            <p>Sanctioned by the Gunn CS Department and in partnership with GTC.</p>
           </footer>
       </div>
 
       <center>
         <div class="row content" id="schedule">
-	  <div class="one columns"></div>
+<div class="one columns"></div>
 	 <div class="ten columns">
-            <h2>Schedule will be released closer to the event!</h2>
+            <h2>Schedule</h2>
           </div>
-        <!--<div class="one columns"></div>
+        <div class="one columns"></div>
         </div>
         <div class="row schedule">
           <div class="one columns"></div>
@@ -123,41 +126,29 @@
 										</thead>
 									<tbody>
 										<tr>
-											<td>10:00 AM</td>
+											<td>6:00 PM</td>
 											<td>Doors Open</td>
 										</tr>
 										<tr>
-											<td>11:00 AM</td>
+											<td>7:00 PM</td>
 											<td>Opening Ceremony<br />Team Formation</td>
 										</tr>
 										<tr>
-											<td>12:00 PM</td>
-											<td>Lunch with your team &mdash; Hacking Begins</td>
+											<td>7:30 PM</td>
+											<td>Dinner with your team &mdash; Hacking Begins</td>
 										</tr>
 
 										<tr>
-											<td>1:00 PM</td>
-											<td>Gotta Code 'Em All (Workshop) &mdash; Make School</td>
-										</tr>
-										<tr>
-											<td>2:00 PM</td>
-											<td>Build Your First iOS App (Workshop) &mdash; Make School</td>
+											<td>8:00 PM</td>
+											<td>Workshop 1 - TBD</td>
 										</tr>
                     <tr>
-                      <td>3:00 PM</td>
-                      <td>Game Development Workshop &mdash; Gunn Hacks</td>
+                      <td>9:00 PM</td>
+                      <td>Workshop 2 - TBD</td>
                     </tr>
 										<tr>
-											<td>5:30 PM</td>
-											<td>MLH: Capture the Flag</td>
-										</tr>
-                    <tr>
-											<td>7:00 PM</td>
-											<td>Dinner</td>
-										</tr>
-										<tr>
-											<td>9:30 PM</td>
-											<td>MLH: Super-secret special event</td>
+											<td>11:00 PM</td>
+											<td>Workshop 3 - TBD</td>
 										</tr>
 									</tbody>
 								</table>
@@ -173,29 +164,37 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>12:00 AM</td>
-											<td>Hack through the night!</td>
+											<td>4:00 AM</td>
+											<td>Special Workshop - Definitely worth visiting</td>
 										</tr>
 										<tr>
 											<td>6:00 AM</td>
-											<td>Breakfast is served. Begin submitting projects.</td>
-										</tr>
-										<tr>
-											<td>7:00 AM</td>
-											<td>Present your hacks!</td>
-										</tr>
-										<tr>
-											<td>9:00 AM</td>
-											<td>Awards and Closing Ceremony</td>
+											<td>Breakfast is served</td>
 										</tr>
 										<tr>
 											<td>10:00 AM</td>
-											<td>Sleep. You deserve it. </td>
+											<td>Cup Stacking Event by MLH</td>
+										</tr>
+										<tr>
+											<td>12:00 PM</td>
+											<td>Lunch</td>
+										</tr>
+										<tr>
+											<td>3:30 PM</td>
+											<td>Start submitting hacks!</td>
+                    </tr>
+                    <tr>
+											<td>5:00 PM</td>
+											<td>Project Demo</td>
+                    </tr>
+                    <tr>
+											<td>6:00 PM</td>
+											<td>Closing and Awards</td>
 										</tr>
 									</tbody>
 								</table>
           </div>
-    	  <div class="one columns"></div>-->
+    	  <div class="one columns"></div>
         </div>
         
         <div style="background-color:white;">
