added actually working button cuz guat is dumb

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
 
             <!-- Apply Now Button-->
-            <button style="margin-top: 60px;">Apply Now</button>
+            <button style="margin-top: 60px;"><a href="/register">Apply Now</a></button>
 
           </section>
 
