reverting apply now button

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
             </div>
 
             <!-- Apply Now Button-->
-            <!--<button style="margin-top: 60px;"><a href="/register">Apply Now</a></button>-->
-            <p style="margin-top: 60px;">
+            <button style="margin-top: 60px;"><a href="/register">Apply Now</a></button>
+            <!--<p style="margin-top: 60px;">
               Applications are temporarily closed. We will let you know when they are open again.<br>
               Please note that applications are not over, and that this is for a small period of time.
-            </p>
+            </p>-->
 
           </section>
 
