--- a/index.html
+++ b/index.html
@@ -218,21 +218,16 @@
               <h3>Partners</h3>
               <img src="http://hacker.fund/images/HackerFundLogo.png" style="padding-left: 20px; padding-right: 20px;"/>
 	      <img src="https://cdn.rawgit.com/hackclub/meta/master/logos/hack_club_red_text.svg" style="padding:10px 20px 12px 20px; height: 70px; "/>
-	      <br />
-        <img src="http://www.byjor.com/images/places/makeschool.png" style="padding-left: 20px; padding-right: 20px;" />
-        <img src="https://static.mlh.io/brand-assets/logo/2017/mlh-logo-color.png" style="padding-left:20px; padding-top: 20px; padding-right: 20px; height: 100px;"/>
-            </center>
+        <br />
+            -->
+        <center>
+          <a href="http://www.slb.com"><img src="img/schlumberger.jpeg"></img></a>
+        </center>
+        <h3>Partners</h3>
+        <a href="https://www.makeschool.com/"><img src="http://www.byjor.com/images/places/makeschool.png" style="padding-left: 20px; padding-right: 20px;" /></a>
+        <a href="https://mlh.io/"><img src="https://static.mlh.io/brand-assets/logo/2017/mlh-logo-color.png" style="padding-left:20px; padding-top: 20px; padding-right: 20px; height: 100px;"/></a>
+        </center>
 
-          -->
-
-          </div>
-          <div class="one columns"></div>
-        </div>
-
-        <div class="row content">
-          <div class="one columns"></div>
-          <div class="ten columns">
-            <p style="color:black;">Made by the GunnHacks team.</p>
           </div>
           <div class="one columns"></div>
         </div>
@@ -241,6 +236,13 @@
 
   </div>
 
+  <div class="row content">
+    <div class="one columns"></div>
+    <div class="ten columns">
+      <p style="color:black;">Made by the GunnHacks team.</p>
+    </div>
+    <div class="one columns"></div>
+  </div>
  
   <!-- MLH Badge -->
   <!--<a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2018/events?utm_source=na-2018&utm_medium=TrustBadge&utm_campaign=na-2018&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2018/white.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>-->
