added incomplete faq

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
       	      <a href="/register">Apply</a>
               <a href="#schedule">Schedule</a>
               <a href="#sponsors">Sponsors</a>
-	      <a href="/code-of-conduct.pdf">Terms</a>
+              <a href="/code-of-conduct.pdf">Terms</a>
+              <a href="#faq">FAQ</a>
             </div>
 
             <!-- Apply Now Button-->
@@ -197,11 +198,129 @@
 										</tr>
 									</tbody>
 								</table>
-          </div>
-    	  <div class="one columns"></div>
+              </div>
+            </div>
+  <div class="row content" id="faq">
+    <div class="one columns"></div>
+    <div class="ten columns">      
+      <h2>FAQ</h2>
+      <div class="question-whole">
+        <div class="question"><h3>What is a hackathon?</h3></div>
+        <div class="answer">
+          <p>
+              Hackathons are where your crazy idea becomes reality. Students work in teams of up to five for 24 hours to create something amazing. Build anything&mdash;there are no restrictions on what you can create. Dive in and make the most incredible thing you can alongside fellow creators.
+          </p>
         </div>
+      </div>
+      <div class="question-whole">
+          <div class="question"><h3>Who can attend?</h3></div>
+          <div class="answer">
+            <p>
+                Any high schoolers can attend GunnHacks. Unfortunately, we cannot allow college students or middle schoolers to attend this time around.
+            </p>
+          </div>
+        </div>
+        <div class="question-whole">
+            <div class="question"><h3>What if I don&rsquo;t know how to code?</h3></div>
+            <div class="answer">
+              <p>
+                All students regardless of coding ability or experience are welcome. Hackathons are a great place to learn, so come and build your first app, website, or anything else! We&rsquo;ll also have workshops for you to start off or learn something new.
+              </p>
+            </div>
+          </div>
+        <div class="question-whole">
+            <div class="question"><h3>What can I build?</h3></div>
+            <div class="answer">
+              <p>
+                Web, mobile, hardware, you name it&mdash;any type of project is welcome. Projects will be judged based on creativity, technical difficulty, polish, and utility by a panel of industry judges.
+              </p>
+              </div>
+          </div>
+        <div class="question-whole">
+            <div class="question"><h3>How big should teams be? Can I hack alone?</h3></div>
+            <div class="answer">
+              <p>
+                We highly encourage you to build with a team. Teamwork is deeply rooted in the hacking ethos, and you&rsquo;ll have a better time building with your brightest peers. Teams shall consist of no more than five people. But don&rsquo;t worry if you don&rsquo;t have a team before the event&mdash;we will have a team-formation session Friday night.
+              </p>
+            </div>
+          </div>
+        <div class="question-whole">
+            <div class="question"><h3>What if I don&rsquo;t have a team or an idea?</h3></div>
+            <div class="answer">
+              <p>
+                No problem! Many hackers do not have a fully-formed team or hack concept before the event begins. We will be hosting team-forming activities after hacking begins to help you find the perfect match. If you&rsquo;re a first-time hacker, there will be many others looking for team members with whom you can work.
+              </p>
+            </div>
+          </div>
+        <div class="question-whole">
+            <div class="question"><h3>What can I build?</h3></div>
+            <div class="answer">
+              <p>
+                Web, mobile, hardware, you name it&mdash;any type of project is welcome. Projects will be judged based on creativity, technical difficulty, polish, and utility by a panel of industry judges.
+              </p>
+              </div>
+          </div>
+        <div class="question-whole">
+            <div class="question"><h3>How much does it cost?</h3></div>
+            <div class="answer">
+                <p>
+                  GunnHacks will cost you zero, zil, nada. Just get yourself here, and we will provide you with WiFi, meals, swag, and workspace for the entire event.
+                </p>
+              </div>
+          </div>
+        <div class="question-whole">
+              <div class="question"><h3>Do I have to work the whole time?</h3></div>
+              <div class="answer">
+                  <p>
+                    No, not at all! We will have dedicated sleeping areas and other fun activities for when you need to take a break.
+                  </p>
+                </div>
+            </div>
+        <div class="question-whole">
+              <div class="question"><h3>Where is GunnHacks?</h3></div>
+              <div class="answer">
+                  <p>
+                    GunnHacks 4.0 will be held at <a target="_blank" href="https://www.google.com/maps?q=Henry+M.+Gunn+High+School,+780+Arastradero+Rd,+Palo+Alto,+CA+94306" alt="780 Arastradero Rd, Palo Alto, CA 94306">Henry M. Gunn High School</a>. You can park in the main parking lot and look for signs to the event.
+                  </p>
+                </div>
+            </div>
+        <div class="question-whole">
+              <div class="question"><h3>When do applications close?</h3></div>
+              <div class="answer">
+                  <p>
+                    Applications close on October 14th at 11:59pm.
+                  </p>
+                </div>
+            </div>
+        <div class="question-whole">
+              <div class="question"><h3>What should I bring?</h3></div>
+              <div class="answer">
+                  <p>
+                    All attendees are required to bring their valid student ID (or equivalent school ID) for admission. Bring laptops, phones, chargers, and any other tech you need for the weekend. Sleeping bags and toiletries are also highly recommended.
+                  </p>
+              </div>
+            </div>
+        <div class="question-whole">
+              <div class="question"><h3>I&rsquo;m interested in mentoring! How can I get involved?</h3></div>
+              <div class="answer">
+                  <p>
+                      Yay! Shoot us an email at <a href="mailto:info@gunnhacks.com">info@gunnhacks.com</a>.
+                  </p>
+                </div>
+            </div>
+        <div class="question-whole">
+          <div class="question"><h3>What if I have another question?</h3></div>
+          <div class="answer">
+              <p>
+                We love questions! Please feel free to reach out to us at <a href="mailto:info@gunnhacks.com">info@gunnhacks.com</a>.
+              </p>
+            </div>
+        </div>
+    </div>
+  </div>
+  <div class="one columns"></div>
         
-        <div style="background-color:white;">
+  <div style="background-color:white;">
         <div class="row content" id="sponsors">
           <div class="one columns"></div>
           <div class="ten columns">
