--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 										</tr>
 										<tr>
 											<td>7:30 PM</td>
-											<td>Dinner with your team &mdash; Hacking Begins</td>
+											<td>Hacking Begins</td>
 										</tr>
 
 										<tr>
