--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <div class="question"><div class="symbol"><h3>+</h3></div><h3>How big should teams be? Can I hack alone?</h3></div>
             <div class="answer">
               <p>
-                We highly encourage you to build with a team. Teamwork is deeply rooted in the hacking ethos, and you&rsquo;ll have a better time building with your brightest peers. Teams shall consist of no more than five people. But don&rsquo;t worry if you don&rsquo;t have a team before the event&mdash;we will have a team-formation session Friday night.
+                We highly encourage you to build with a team. Teamwork is deeply rooted in the hacking ethos, and you&rsquo;ll have a better time building with your brightest peers. Teams shall consist of no more than four people. But don&rsquo;t worry if you don&rsquo;t have a team before the event&mdash;we will have a team-formation session Friday night.
               </p>
             </div>
           </div>
