--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
               <p style="margin-top: -10px;">Questions? Email <a href="mailto:info@gunnhacks.com">info@gunnhacks.com</a></p>
             </div>
             <div class="nav">
-      	      <a href="/register">Apply</a>
+              <a href="https://join.slack.com/t/gunnhacks4/shared_invite/enQtMjU3MDQ5ODI1MjY3LTBiNWIyZTJhZWJmYjhiNTAyNmU1NWI4ZThiYWU2YzNlMGI2OGI4YmM2MWMwZWY1YzgyZDA5OGM3OTgwMTczZWU">Join Slack</a>
               <a href="#schedule">Schedule</a>
               <a href="#faq">FAQ</a>
+              <a href="#team">Our Team</a>
               <a href="#sponsors">Sponsors</a>
               <a href="/code-of-conduct.pdf">Terms</a>
             </div>
@@ -323,6 +324,10 @@
     </div>
   </div>
   <div class="one columns"></div>
+
+  <div id="team">
+    <div></div>
+  </div>
         
   <div style="background-color:white;">
         <div class="row content" id="sponsors">
@@ -353,9 +358,6 @@
           <br>   
           <img src="https://cdn.doordash.com/media/restaurant/cover/pastamarket.png" style="padding-left: 20px; padding-right: 20px; height: 150px; margin-bottom: 5px;">
           <a href="https://ultrapress.com/"><img src="https://ultrapress-production.s3.amazonaws.com/static/images/public/ultrapress-custom-tshirts.png" style="height: 75px"></a>
-        </center>
-        <br>
-        <h3>Partners</h3>
         <a href="https://mlh.io/"><img src="https://static.mlh.io/brand-assets/logo/2017/mlh-logo-color.png" style="padding-left:20px; padding-top: 20px; padding-right: 20px; height: 100px;"/></a>
         <a href="https://hackclub.com"><img src="https://camo.githubusercontent.com/9da562c056d50bd84bb282ab49349ca47d64e352/68747470733a2f2f63646e2e7261776769742e636f6d2f6861636b636c75622f6d6574612f666334633064323230343236656235336131373665363536616537373030643964636430623263352f6c6f676f732f6861636b5f636c75625f7265645f746578742e737667" style="padding-left:20px; padding-top: 20px; padding-right: 20px; height: 100px;"></a>
         </center>
