--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <p style="margin-top: -10px;">Questions? Email <a href="mailto:info@gunnhacks.com">info@gunnhacks.com</a></p>
             </div>
             <div class="nav">
-              <a href="https://join.slack.com/t/gunnhacks4/shared_invite/enQtMjU3MDQ5ODI1MjY3LTBiNWIyZTJhZWJmYjhiNTAyNmU1NWI4ZThiYWU2YzNlMGI2OGI4YmM2MWMwZWY1YzgyZDA5OGM3OTgwMTczZWU">Join Slack</a>
+      	      <a href="/register">Apply</a>
               <a href="#schedule">Schedule</a>
               <a href="#faq">FAQ</a>
               <a href="#team">Our Team</a>
@@ -102,7 +102,7 @@
             </div>
 
             <!-- Apply Now Button-->
-            <button style="margin-top: 60px;"><a href="/register">Apply Now</a></button>
+            <button style="margin-top: 60px;"><a href="https://join.slack.com/t/gunnhacks4/shared_invite/enQtMjU3MDQ5ODI1MjY3LTBiNWIyZTJhZWJmYjhiNTAyNmU1NWI4ZThiYWU2YzNlMGI2OGI4YmM2MWMwZWY1YzgyZDA5OGM3OTgwMTczZWU">Join Slack</a></button>
             <!--<p style="margin-top: 60px;">
               Applications are temporarily closed. We will let you know when they are open again.<br>
               Please note that applications are not over, and that this is for a small period of time.
