fixed nav issue

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       	      <a href="/register">Apply</a>
               <a href="#schedule">Schedule</a>
               <a href="#faq">FAQ</a>
-              <a href="#team">Our Team</a>
+              <a href="#team">Team</a>
               <a href="#sponsors">Sponsors</a>
               <a href="/code-of-conduct.pdf">Terms</a>
             </div>
