--- a/index.html
+++ b/index.html
@@ -143,22 +143,26 @@
 											<td>7:00 PM</td>
 											<td>Opening Ceremony<br />Team Formation</td>
 										</tr>
-										<tr>
-											<td>7:30 PM</td>
-											<td>Hacking Begins</td>
-										</tr>
 
 										<tr>
 											<td>8:00 PM</td>
-											<td>Workshop 1 - TBD</td>
-										</tr>
+											<td>Team Formation and Hacking Begins!</td>
+                    </tr>
                     <tr>
                       <td>9:00 PM</td>
-                      <td>Workshop 2 - TBD</td>
+                      <td>Workshop: Beginners w/ Hack Club</td>
+                    </tr>
+                    <tr>
+                      <td>10:00 PM</td>
+                      <td>Workshop: Entrepreneurship w/ Leangap</td>
+                    </tr>
+                    <tr>
+                      <td>11:00 PM</td>
+                      <td>Workshop: CS After HS (College/Jobs) w/ MakeSchool</td>
                     </tr>
 										<tr>
-											<td>11:00 PM</td>
-											<td>Workshop 3 - TBD</td>
+											<td>12:00 AM</td>
+											<td>Workshop: Intro to Python w/ Girl's Tech Club</td>
 										</tr>
 									</tbody>
 								</table>
@@ -173,33 +177,45 @@
 										</tr>
 									</thead>
 									<tbody>
+                    <tr>
+                      <td>12:30 AM</td>
+                      <td>Midnight Snack!</td>
+                    </tr>
+                    <tr>
+                      <td>1:00 AM</td>
+                      <td>Workshop: Intro to Bot Hacking</td>
+                    </tr>
+                    <tr>
+                      <td>2:00 AM</td>
+                      <td>Hacking with MLH</td>
+                    </tr>
 										<tr>
 											<td>4:00 AM</td>
 											<td>Special Workshop - Definitely worth visiting</td>
 										</tr>
 										<tr>
-											<td>6:00 AM</td>
+											<td>7:00 AM</td>
 											<td>Breakfast is served</td>
 										</tr>
 										<tr>
-											<td>10:00 AM</td>
+											<td>11:00 AM</td>
 											<td>Cup Stacking Event by MLH</td>
 										</tr>
 										<tr>
-											<td>12:00 PM</td>
+											<td>11:30 AM</td>
 											<td>Lunch</td>
 										</tr>
 										<tr>
-											<td>3:30 PM</td>
-											<td>Start submitting hacks!</td>
+											<td>3:00 PM</td>
+											<td>Submit your hacks!</td>
+                    </tr>
+                    <tr>
+											<td>4:00 PM</td>
+											<td>Hacking Ends and Demos Begin</td>
                     </tr>
                     <tr>
 											<td>5:00 PM</td>
-											<td>Project Demo</td>
-                    </tr>
-                    <tr>
-											<td>6:00 PM</td>
-											<td>Closing and Awards</td>
+											<td>Closing Ceremony and Awards</td>
 										</tr>
 									</tbody>
 								</table>
