updated site schedule again

--- a/index.html
+++ b/index.html
@@ -150,20 +150,20 @@
                     </tr>
                     <tr>
                       <td>9:00 PM</td>
-                      <td>Workshop: Beginners w/ Hack Club</td>
+                      <td>Workshop: Beginners w/ Hack Club and Workshop: Entrepreneurship w/ Leangap</td>
                     </tr>
                     <tr>
                       <td>10:00 PM</td>
-                      <td>Workshop: Entrepreneurship w/ Leangap</td>
+                      <td>Workshop: Intro to Python w/ Girl's Tech Club</td>
                     </tr>
                     <tr>
                       <td>11:00 PM</td>
                       <td>Workshop: CS After HS (College/Jobs) w/ MakeSchool</td>
                     </tr>
-										<tr>
-											<td>12:00 AM</td>
-											<td>Workshop: Intro to Python w/ Girl's Tech Club</td>
-										</tr>
+                    <tr>
+                      <td>12:00 AM</td>
+                      <td>Workshop: Intro to Bot Hacking</td>
+                    </tr>
 									</tbody>
 								</table>
           </div>
@@ -178,12 +178,8 @@
 									</thead>
 									<tbody>
                     <tr>
-                      <td>12:30 AM</td>
+                      <td>12:00 AM</td>
                       <td>Midnight Snack!</td>
-                    </tr>
-                    <tr>
-                      <td>1:00 AM</td>
-                      <td>Workshop: Intro to Bot Hacking</td>
                     </tr>
                     <tr>
                       <td>2:00 AM</td>
