trying to fix schedule

--- a/index.html
+++ b/index.html
@@ -150,7 +150,11 @@
                     </tr>
                     <tr>
                       <td>9:00 PM</td>
-                      <td>Workshop: Beginners w/ Hack Club and Workshop: Entrepreneurship w/ Leangap</td>
+                      <td>Workshop: Beginners w/ Hack Club</td>
+                    </tr>
+                    <tr>
+                      <td>9:30 PM</td>
+                      <td>Workshop: Entrepreneurship w/ Leangap</td>
                     </tr>
                     <tr>
                       <td>10:00 PM</td>
