--- a/index.html
+++ b/index.html
@@ -460,12 +460,35 @@
 
 </div>
 
-<div class="row content">
+<div id="other-years" class="row content">
+    <!--
     <div class="one columns"></div>
     <div class="ten columns">
         <p style="color:black;">Made by the GunnHacks team.</p>
     </div>
     <div class="one columns"></div>
+    -->
+    <div class="three columns">
+        <h3>Other Years</h3>
+    </div>
+    <div class="one columns">
+        <h3><a href="https://gunnhacks.com/">7.0</a></h3>
+    </div>
+    <div class="one columns">
+        <h3><a href="https://gunnhacks.com/GunnHacks6.0">6.0</a></h3>
+    </div>
+    <div class="one columns">
+        <h3><a href="https://gunnhacks.com/GunnHacks5.0">5.0</a></h3>
+    </div>
+    <div class="one columns">
+        <h3><a href="https://gunnhacks.com/GunnHacks3.0">3.0</a></h3>
+    </div>
+    <div class="one columns">
+        <h3><a href="https://gunnhacks.com/GunnHacks2.0">2.0</a></h3>
+    </div>
+    <div class="one columns">
+        <h3><a href="https://gunnhacks.com/gunnhacks">1.0</a></h3>
+    </div>
 </div>
 
 <!-- MLH Badge -->
