--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             </div>
         </div>
 
-        <div id="other-years" class="row content">
+        <div id="prev-years" class="row content">
             <!--
             <div class="one columns"></div>
             <div class="ten columns">
@@ -466,25 +466,16 @@
             <div class="one columns"></div>
             -->
             <div class="three columns">
-                <h3>Other Years</h3>
+                <h3>Previous Years</h3>
             </div>
             <div class="one columns">
-                <h3><a href="https://gunnhacks.com/">7.0</a></h3>
+                <h3><a target="_blank" rel="noopener noreferrer" href="https://gunnhacks.com/GunnHacks3.0">3.0</a></h3>
             </div>
             <div class="one columns">
-                <h3><a href="https://gunnhacks.com/GunnHacks6.0">6.0</a></h3>
+                <h3><a target="_blank" rel="noopener noreferrer" href="https://gunnhacks.com/GunnHacks2.0">2.0</a></h3>
             </div>
             <div class="one columns">
-                <h3><a href="https://gunnhacks.com/GunnHacks5.0">5.0</a></h3>
-            </div>
-            <div class="one columns">
-                <h3><a href="https://gunnhacks.com/GunnHacks3.0">3.0</a></h3>
-            </div>
-            <div class="one columns">
-                <h3><a href="https://gunnhacks.com/GunnHacks2.0">2.0</a></h3>
-            </div>
-            <div class="one columns">
-                <h3><a href="https://gunnhacks.com/gunnhacks">1.0</a></h3>
+                <h3><a target="_blank" rel="noopener noreferrer" href="https://gunnhacks.com/gunnhacks">1.0</a></h3>
             </div>
         </div>
     </center>
