Update bottom nav URLs with new subdomains

--- a/index.html
+++ b/index.html
@@ -469,13 +469,13 @@
                 <h3>Previous Years</h3>
             </div>
             <div class="one columns">
-                <h3><a target="_blank" rel="noopener noreferrer" href="https://gunnhacks.com/GunnHacks3.0">3.0</a></h3>
+                <h3><a target="_blank" rel="noopener noreferrer" href="https://3.0.gunnhacks.com/">3.0</a></h3>
             </div>
             <div class="one columns">
-                <h3><a target="_blank" rel="noopener noreferrer" href="https://gunnhacks.com/GunnHacks2.0">2.0</a></h3>
+                <h3><a target="_blank" rel="noopener noreferrer" href="https://2.0.gunnhacks.com/">2.0</a></h3>
             </div>
             <div class="one columns">
-                <h3><a target="_blank" rel="noopener noreferrer" href="https://gunnhacks.com/gunnhacks">1.0</a></h3>
+                <h3><a target="_blank" rel="noopener noreferrer" href="https://1.0.gunnhacks.com/">1.0</a></h3>
             </div>
         </div>
     </center>
